Mark grpcroutes.spec as required

--- a/config/crd/experimental/gateway.networking.k8s.io_grpcroutes.yaml
+++ b/config/crd/experimental/gateway.networking.k8s.io_grpcroutes.yaml
@@ -2204,6 +2204,8 @@ spec:
             required:
             - parents
             type: object
+        required:
+        - spec
         type: object
     served: true
     storage: true
