--- a/config/crd/standard/gateway.networking.k8s.io_grpcroutes.yaml
+++ b/config/crd/standard/gateway.networking.k8s.io_grpcroutes.yaml
@@ -2047,6 +2047,8 @@ spec:
             required:
             - parents
             type: object
+        required:
+        - spec
         type: object
     served: true
     storage: true
