Docs: Clarify and resolve inconsistencies in GEP-3792
This commit addresses several logical inconsistencies and ambiguities
in GEP-3792 (Out-of-Cluster Gateways) to provide a clearer path for
implementers.

Key changes:
- Resolves the contradiction in the "Protocol Problem" by definitively
  stating that the initial release will use standard "bare" mTLS,
  deferring a custom ALPN to a future GEP.
- Clarifies the "Trust Problem" solution by establishing Secret
  references as the baseline for conformance, while recommending
  ClusterTrustBundle as the preferred, forward-looking approach.

--- a/geps/gep-3792/metadata.yaml
+++ b/geps/gep-3792/metadata.yaml
@@ -7,6 +7,7 @@ status: Provisional
 # their GitHub handle.
 authors:
   - kflynn
+  - karthikbox
 relationships:
   # obsoletes indicates that a GEP makes the linked GEP obsolete, and completely
   # replaces that GEP. The obsoleted GEP MUST have its obsoletedBy field
