--- a/geps/gep-3798/metadata.yaml
+++ b/geps/gep-3798/metadata.yaml
@@ -2,7 +2,7 @@ apiVersion: internal.gateway.networking.k8s.io/v1alpha1
 kind: GEPDetails
 number: 3798
 name: Client IP-Based Session Persistence
-status: Provisional
+status: Deferred
 # Any authors who contribute to the GEP in any way should be listed here using
 # their GitHub handle.
 authors:
