Fix boilerplate of test file

--- a/.github/workflows/crd-validation.yml
+++ b/.github/workflows/crd-validation.yml
@@ -9,7 +9,7 @@ permissions: {}
 
 jobs:
   crd-validation:
-    name: CEL CRD Validation
+    name: CEL
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
@@ -20,6 +20,8 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # tag=v4.2.2
+        with:
+          persist-credentials: false
       - name: Set up Go
         uses: actions/setup-go@d35c59abb061a4a6fb18e82ac0862c26744d6ab5 # tag=v5.5.0
       - name: Run CRD Validation tests
