Lint required optional (#3929)
* Add missing required markers on gateway types

* Add missing required markers on grpcroute types

* Add missing required markers on httproute types

* Add missing required markers on obj_reference types

* Add missing required markers on shared types

* Add missing required markers on experimental types

* Add missing required markers on v1beta1 types

* Add missing required markers on v1alpha3 types

* Add missing required markers on v1alpha2 types

* Enable optionalorrequired linter

* Revert objectmeta field doc

* Revert minItems changes

--- a/config/crd/experimental/gateway.networking.k8s.io_gateways.yaml
+++ b/config/crd/experimental/gateway.networking.k8s.io_gateways.yaml
@@ -973,6 +973,8 @@ spec:
                               maxItems: 8
                               minItems: 1
                               type: array
+                          required:
+                          - caCertificateRefs
                           type: object
                         mode:
                           default: Terminate
@@ -2311,6 +2313,8 @@ spec:
                               maxItems: 8
                               minItems: 1
                               type: array
+                          required:
+                          - caCertificateRefs
                           type: object
                         mode:
                           default: Terminate
