--- a/config/crd/standard/gateway.networking.k8s.io_httproutes.yaml
+++ b/config/crd/standard/gateway.networking.k8s.io_httproutes.yaml
@@ -131,7 +131,7 @@ spec:
                   type: string
                 maxItems: 16
                 type: array
-                x-kubernetes-list-type: atomic
+                x-kubernetes-list-type: set
               parentRefs:
                 description: |-
                   ParentRefs references the resources (usually Gateways) that a Route wants
@@ -2940,7 +2940,7 @@ spec:
                   type: string
                 maxItems: 16
                 type: array
-                x-kubernetes-list-type: atomic
+                x-kubernetes-list-type: set
               parentRefs:
                 description: |-
                   ParentRefs references the resources (usually Gateways) that a Route wants
