--- a/conformance/tests/backendtlspolicy.yaml
+++ b/conformance/tests/backendtlspolicy.yaml
@@ -70,6 +70,24 @@ spec:
     - path:
         type: Exact
         value: /backendTLSCertMismatch
+  - backendRefs:
+    - group: ""
+      kind: Service
+      name: backendtlspolicy-san-mismatch-test
+      port: 443
+    matches:
+    - path:
+        type: Exact
+        value: /backendTLSSanMismatch
+  - backendRefs:
+    - group: ""
+      kind: Service
+      name: backendtlspolicy-san-test
+      port: 443
+    matches:
+    - path:
+        type: Exact
+        value: /backendTLSSan
 ---
 apiVersion: v1
 kind: Service
@@ -104,6 +122,36 @@ apiVersion: v1
 kind: Service
 metadata:
   name: backendtlspolicy-cert-mismatch-test
+  namespace: gateway-conformance-infra
+spec:
+  selector:
+    app: backendtlspolicy-test
+  ports:
+  - name: "btls"
+    protocol: TCP
+    appProtocol: HTTPS
+    port: 443
+    targetPort: 8443
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: backendtlspolicy-san-mismatch-test
+  namespace: gateway-conformance-infra
+spec:
+  selector:
+    app: backendtlspolicy-test
+  ports:
+  - name: "btls"
+    protocol: TCP
+    appProtocol: HTTPS
+    port: 443
+    targetPort: 8443
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: backendtlspolicy-san-test
   namespace: gateway-conformance-infra
 spec:
   selector:
@@ -222,18 +270,43 @@ spec:
 apiVersion: gateway.networking.k8s.io/v1alpha3
 kind: BackendTLSPolicy
 metadata:
-  name: backendtlspolicy-cert-mismatch
+  name: backendtlspolicy-san
   namespace: gateway-conformance-infra
 spec:
   targetRefs:
   - group: ""
     kind: Service
-    name: "backendtlspolicy-cert-mismatch-test"
+    name: "backendtlspolicy-san-test"
     sectionName: "btls"
   validation:
     caCertificateRefs:
     - group: ""
       kind: ConfigMap
       # This secret is generated dynamically by the test suite.
-      name: "backend-tls-mismatch-certificate"
-    hostname: "abc.example.com"
+      name: "backend-tls-certificate"
+    subjectAltNames:
+    - type: Hostname
+      hostname: abc.example.com
+    hostname: "mismatch.example.com"
+---
+apiVersion: gateway.networking.k8s.io/v1alpha3
+kind: BackendTLSPolicy
+metadata:
+  name: backendtlspolicy-san-mismatch
+  namespace: gateway-conformance-infra
+spec:
+  targetRefs:
+  - group: ""
+    kind: Service
+    name: "backendtlspolicy-san-mismatch-test"
+    sectionName: "btls"
+  validation:
+    caCertificateRefs:
+    - group: ""
+      kind: ConfigMap
+      # This secret is generated dynamically by the test suite.
+      name: "backend-tls-certificate"
+    subjectAltNames:
+    - type: Hostname
+      hostname: cde.example.com
+    hostname: "mismatch.example.com"
