--- a/conformance/tests/backendtlspolicy.yaml
+++ b/conformance/tests/backendtlspolicy.yaml
@@ -88,6 +88,15 @@ spec:
     - path:
         type: Exact
         value: /backendTLSSan
+  - backendRefs:
+    - group: ""
+      kind: Service
+      name: backendtlspolicy-multiple-sans-test
+      port: 443
+    matches:
+    - path:
+        type: Exact
+        value: /backendTLSMultiSans
 ---
 apiVersion: v1
 kind: Service
@@ -152,6 +161,21 @@ apiVersion: v1
 kind: Service
 metadata:
   name: backendtlspolicy-san-test
+  namespace: gateway-conformance-infra
+spec:
+  selector:
+    app: backendtlspolicy-test
+  ports:
+  - name: "btls"
+    protocol: TCP
+    appProtocol: HTTPS
+    port: 443
+    targetPort: 8443
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: backendtlspolicy-multiple-sans-test
   namespace: gateway-conformance-infra
 spec:
   selector:
@@ -270,6 +294,25 @@ spec:
 apiVersion: gateway.networking.k8s.io/v1alpha3
 kind: BackendTLSPolicy
 metadata:
+  name: backendtlspolicy-cert-mismatch
+  namespace: gateway-conformance-infra
+spec:
+  targetRefs:
+  - group: ""
+    kind: Service
+    name: "backendtlspolicy-cert-mismatch-test"
+    sectionName: "btls"
+  validation:
+    caCertificateRefs:
+    - group: ""
+      kind: ConfigMap
+      # This secret is generated dynamically by the test suite.
+      name: "backend-tls-mismatch-certificate"
+    hostname: "abc.example.com"
+---
+apiVersion: gateway.networking.k8s.io/v1alpha3
+kind: BackendTLSPolicy
+metadata:
   name: backendtlspolicy-san
   namespace: gateway-conformance-infra
 spec:
@@ -283,11 +326,37 @@ spec:
     - group: ""
       kind: ConfigMap
       # This secret is generated dynamically by the test suite.
-      name: "backend-tls-certificate"
+      name: "backend-tls-checks-certificate"
+    hostname: "abc.example.com"
     subjectAltNames:
     - type: Hostname
       hostname: abc.example.com
-    hostname: "mismatch.example.com"
+---
+apiVersion: gateway.networking.k8s.io/v1alpha3
+kind: BackendTLSPolicy
+metadata:
+  name: backendtlspolicy-multiple-sans
+  namespace: gateway-conformance-infra
+spec:
+  targetRefs:
+  - group: ""
+    kind: Service
+    name: "backendtlspolicy-multiple-sans-test"
+    sectionName: "btls"
+  validation:
+    caCertificateRefs:
+    - group: ""
+      kind: ConfigMap
+      # This secret is generated dynamically by the test suite.
+      name: "backend-tls-checks-certificate"
+    hostname: "abc.example.com"
+    subjectAltNames:
+    - type: Hostname
+      hostname: abc.example.com
+    - type: Hostname
+      hostname: efg.example.com
+    - type: Hostname
+      hostname: yjh.example.com
 ---
 apiVersion: gateway.networking.k8s.io/v1alpha3
 kind: BackendTLSPolicy
@@ -305,8 +374,8 @@ spec:
     - group: ""
       kind: ConfigMap
       # This secret is generated dynamically by the test suite.
-      name: "backend-tls-certificate"
+      name: "backend-tls-checks-certificate"
+    hostname: "abc.example.com"
     subjectAltNames:
     - type: Hostname
       hostname: cde.example.com
-    hostname: "mismatch.example.com"
