--- a/conformance/reports/v1.3.0/envoy-gateway/experimental-v1.5.0-gateway-namespace-mode-report.yaml
+++ b/conformance/reports/v1.3.0/envoy-gateway/experimental-v1.5.0-gateway-namespace-mode-report.yaml
@@ -10,7 +10,7 @@ implementation:
   url: https://github.com/envoyproxy/gateway
   version: latest
 kind: ConformanceReport
-mode: default
+mode: GatewayNamespace
 profiles:
 - core:
     result: success
