--- a/conformance/reports/v1.3.0/envoy-gateway/experimental-v1.5.0-default-report.yaml
+++ b/conformance/reports/v1.3.0/envoy-gateway/experimental-v1.5.0-default-report.yaml
@@ -8,7 +8,7 @@ implementation:
   organization: envoyproxy
   project: envoy-gateway
   url: https://github.com/envoyproxy/gateway
-  version: latest
+  version: v1.5.0
 kind: ConformanceReport
 mode: default
 profiles:
