Refined implementation-specific behavior of CACertificateRefs
Signed-off-by: Norwin Schnyder <norwin.schnyder+github@gmail.com>

--- a/config/crd/experimental/gateway.networking.k8s.io_backendtlspolicies.yaml
+++ b/config/crd/experimental/gateway.networking.k8s.io_backendtlspolicies.yaml
@@ -212,7 +212,7 @@ spec:
                       with the CA certificate in a key named `ca.crt`.
 
                       Support: Implementation-specific - More than one reference, or other kinds
-                      of resources.
+                      of resources. A single reference might also include multiple certificates.
                     items:
                       description: |-
                         LocalObjectReference identifies an API object within the namespace of the
