--- a/conformance/tests/backendtlspolicy.yaml
+++ b/conformance/tests/backendtlspolicy.yaml
@@ -45,7 +45,7 @@ metadata:
   namespace: gateway-conformance-infra
 spec:
   selector:
-    app: backendtlspolicy-test
+    app: tls-backend
   ports:
   - name: "btls"
     protocol: TCP
@@ -59,7 +59,7 @@ metadata:
   namespace: gateway-conformance-infra
 spec:
   selector:
-    app: backendtlspolicy-test
+    app: tls-backend
   ports:
   - name: "btls"
     protocol: TCP
@@ -74,79 +74,13 @@ metadata:
   namespace: gateway-conformance-infra
 spec:
   selector:
-    app: backendtlspolicy-test
+    app: tls-backend
   ports:
   - name: "btls"
     protocol: TCP
     appProtocol: HTTPS
     port: 443
     targetPort: 8443
----
-# Deployment must not be applied until after the secret is generated.
-apiVersion: apps/v1
-kind: Deployment
-metadata:
-  name: backendtlspolicy-test
-  namespace: gateway-conformance-infra
-  labels:
-    app: backendtlspolicy-test
-spec:
-  replicas: 1
-  selector:
-    matchLabels:
-      app: backendtlspolicy-test
-  template:
-    metadata:
-      labels:
-        app: backendtlspolicy-test
-    spec:
-      containers:
-      - name: backendtlspolicy-test
-        image: gcr.io/k8s-staging-gateway-api/echo-basic:v20240412-v1.0.0-394-g40c666fd
-        volumeMounts:
-        - name: ca-volume
-          mountPath: /etc/ca-volume
-        - name: secret-volume
-          mountPath: /etc/secret-volume
-        env:
-        - name: POD_NAME
-          valueFrom:
-            fieldRef:
-              fieldPath: metadata.name
-        - name: NAMESPACE
-          valueFrom:
-            fieldRef:
-              fieldPath: metadata.namespace
-        - name: CA_CERT
-          value: /etc/ca-volume/crt
-        - name: CA_CERT_KEY
-          value: /etc/ca-volume/key
-        - name: TLS_SERVER_CERT
-          value: /etc/secret-volume/crt
-        - name: TLS_SERVER_PRIVKEY
-          value: /etc/secret-volume/key
-        resources:
-          requests:
-            cpu: 10m
-      volumes:
-      - name: ca-volume
-        configMap:
-          # This configMap is generated dynamically by the test suite.
-          name: backend-tls-checks-certificate
-          items:
-          - key: ca.crt
-            path: crt
-          - key: key.crt
-            path: key
-      - name: secret-volume
-        secret:
-          # This secret is generated dynamically by the test suite.
-          secretName: tls-checks-certificate
-          items:
-          - key: tls.crt
-            path: crt
-          - key: tls.key
-            path: key
 ---
 apiVersion: gateway.networking.k8s.io/v1alpha3
 kind: BackendTLSPolicy
@@ -163,8 +97,9 @@ spec:
     caCertificateRefs:
     - group: ""
       kind: ConfigMap
-      # This secret is generated dynamically by the test suite.
-      name: "backend-tls-checks-certificate"
+      # This ConfigMap is generated dynamically by the test suite.
+      # It contains the CA certificate used to sign the tls-backend serving certificate.
+      name: "tls-checks-ca-certificate"
     hostname: "abc.example.com"
 ---
 apiVersion: gateway.networking.k8s.io/v1alpha3
@@ -182,8 +117,9 @@ spec:
     caCertificateRefs:
     - group: ""
       kind: ConfigMap
-      # This secret is generated dynamically by the test suite.
-      name: "backend-tls-checks-certificate"
+      # This ConfigMap is generated dynamically by the test suite.
+      # It contains the CA certificate used to sign the tls-backend serving certificate.
+      name: "tls-checks-ca-certificate"
     hostname: "mismatch.example.com"
 ---
 apiVersion: gateway.networking.k8s.io/v1alpha3
@@ -201,6 +137,7 @@ spec:
     caCertificateRefs:
     - group: ""
       kind: ConfigMap
-      # This secret is generated dynamically by the test suite.
-      name: "backend-tls-mismatch-certificate"
+      # This ConfigMap is generated dynamically by the test suite.
+      # It contains a random, unused CA certificate to force validation to fail.
+      name: "mismatch-ca-certificate"
     hostname: "abc.example.com"
