--- a/config/crd/experimental/gateway.networking.k8s.io_tlsroutes.yaml
+++ b/config/crd/experimental/gateway.networking.k8s.io_tlsroutes.yaml
@@ -511,6 +511,14 @@ spec:
                 - message: Rule name must be unique within the route
                   rule: self.all(l1, !has(l1.name) || self.exists_one(l2, has(l2.name)
                     && l1.name == l2.name))
+              useDefaultGateway:
+                description: |-
+                  useDefaultGateway indicates the default Gateway scope to use for this
+                  Route. If unset (the default), the Route will not be attached to any
+                  default Gateway; if set, it will be attached to any default Gateway
+                  supporting the named scope, subject to the usual rules about which
+                  Routes a Gateway is allowed to claim.
+                type: string
             required:
             - rules
             type: object
@@ -1289,6 +1297,14 @@ spec:
                 - message: Rule name must be unique within the route
                   rule: self.all(l1, !has(l1.name) || self.exists_one(l2, has(l2.name)
                     && l1.name == l2.name))
+              useDefaultGateway:
+                description: |-
+                  useDefaultGateway indicates the default Gateway scope to use for this
+                  Route. If unset (the default), the Route will not be attached to any
+                  default Gateway; if set, it will be attached to any default Gateway
+                  supporting the named scope, subject to the usual rules about which
+                  Routes a Gateway is allowed to claim.
+                type: string
             required:
             - hostnames
             - rules
