--- a/config/crd/experimental/gateway.networking.x-k8s.io_xmeshes.yaml
+++ b/config/crd/experimental/gateway.networking.x-k8s.io_xmeshes.yaml
@@ -55,8 +55,9 @@ spec:
             properties:
               controllerName:
                 description: |-
-                  ControllerName is the name of the controller that is managing Gateways of
-                  this class. The value of this field MUST be a domain prefixed path.
+                  ControllerName is the name of a controller that is managing Gateway API
+                  resources for mesh traffic management. The value of this field MUST be a
+                  domain prefixed path.
 
                   Example: "example.com/awesome-mesh".
 
@@ -78,8 +79,9 @@ spec:
               parametersRef:
                 description: |-
                   ParametersRef is an optional reference to a resource that contains
-                  implementation-specific for this Mesh. If no implementation-specific
-                  parameters are needed, this field MUST be omitted.
+                  implementation-specific configuration for this Mesh. If no
+                  implementation-specific parameters are needed, this field MUST be
+                  omitted.
 
                   ParametersRef can reference a standard Kubernetes resource, i.e.
                   ConfigMap, or an implementation-specific custom resource. The resource
