--- a/config/crd/experimental/gateway.networking.k8s.io_gateways.yaml
+++ b/config/crd/experimental/gateway.networking.k8s.io_gateways.yaml
@@ -216,8 +216,9 @@ spec:
                 type: object
               defaultScope:
                 description: |-
-                  DefaultScope defines the default scope for this Gateway. If unset (the
-                  default), the Gateway will not act as a default Gateway; if set, the
+                  DefaultScope defines the default scope for this Gateway. If unset or
+                  set to the empty string `""` (the default), the Gateway will not
+                  act as a default Gateway; if set, the
                   Gateway will claim any Route with a matching scope set in its
                   UseDefaultGateway field, subject to the usual rules about which routes
                   the Gateway can attach to.
@@ -1776,8 +1777,9 @@ spec:
                 type: object
               defaultScope:
                 description: |-
-                  DefaultScope defines the default scope for this Gateway. If unset (the
-                  default), the Gateway will not act as a default Gateway; if set, the
+                  DefaultScope defines the default scope for this Gateway. If unset or
+                  set to the empty string `""` (the default), the Gateway will not
+                  act as a default Gateway; if set, the
                   Gateway will claim any Route with a matching scope set in its
                   UseDefaultGateway field, subject to the usual rules about which routes
                   the Gateway can attach to.
