--- a/config/crd/experimental/gateway.networking.k8s.io_udproutes.yaml
+++ b/config/crd/experimental/gateway.networking.k8s.io_udproutes.yaml
@@ -454,6 +454,13 @@ spec:
                   default Gateway; if set, it will be attached to any default Gateway
                   supporting the named scope, subject to the usual rules about which
                   Routes a Gateway is allowed to claim.
+
+                  Think carefully before using this functionality! The set of default
+                  Gateways supporting the requested scope can change over time without
+                  any notice to the Route author, and in many situations it will not be
+                  appropriate to request a default Gateway for a given Route -- for
+                  example, a Route with specific security needs should almost certainly
+                  not use a default Gateway.
                 type: string
             required:
             - rules
