--- a/config/crd/standard/gateway.networking.k8s.io_grpcroutes.yaml
+++ b/config/crd/standard/gateway.networking.k8s.io_grpcroutes.yaml
@@ -1799,6 +1799,21 @@ spec:
                     : 0) : 0) + (self.size() > 14 ? (has(self[14].matches) ? self[14].matches.size()
                     : 0) : 0) + (self.size() > 15 ? (has(self[15].matches) ? self[15].matches.size()
                     : 0) : 0) <= 128'
+              useDefaultGateway:
+                description: |-
+                  useDefaultGateway indicates the default Gateway scope to use for this
+                  Route. If unset (the default), the Route will not be attached to any
+                  default Gateway; if set, it will be attached to any default Gateway
+                  supporting the named scope, subject to the usual rules about which
+                  Routes a Gateway is allowed to claim.
+
+                  Think carefully before using this functionality! The set of default
+                  Gateways supporting the requested scope can change over time without
+                  any notice to the Route author, and in many situations it will not be
+                  appropriate to request a default Gateway for a given Route -- for
+                  example, a Route with specific security needs should almost certainly
+                  not use a default Gateway.
+                type: string
             type: object
           status:
             description: Status defines the current state of GRPCRoute.
