--- a/conformance/tests/listenerset-http-listener-cross-namespace.yaml
+++ b/conformance/tests/listenerset-http-listener-cross-namespace.yaml
@@ -6,17 +6,17 @@ metadata:
 spec:
   gatewayClassName: "{GATEWAY_CLASS_NAME}"
   listeners:
-  - name: gateway-com
+  - name: gateway-listener-1-listener
     port: 80
     protocol: HTTP
-    hostname: "gateway.com"
+    hostname: "gateway-listener-1.com"
     allowedRoutes:
       namespaces:
         from: All
-  - name: example-com
+  - name: gateway-listener-2-listener
     port: 80
     protocol: HTTP
-    hostname: "example.com"
+    hostname: "gateway-listener-2.com"
     allowedRoutes:
       namespaces:
         from: All
@@ -46,17 +46,17 @@ spec:
     name: gateway-with-listenerset-http-listener
     namespace: gateway-conformance-infra
   listeners:
-  - name: foo-com
+  - name: listenerset-1-listener-1-listener
     port: 80
     protocol: HTTP
-    hostname: "foo.com"
+    hostname: "listenerset-1-listener-1.com"
     allowedRoutes:
       namespaces:
         from: All
-  - name: bar-com
+  - name: listenerset-1-listener-2-listener
     port: 80
     protocol: HTTP
-    hostname: "bar.com"
+    hostname: "listenerset-1-listener-2.com"
     allowedRoutes:
       namespaces:
         from: All
@@ -69,7 +69,7 @@ metadata:
 apiVersion: gateway.networking.k8s.io/v1
 kind: HTTPRoute
 metadata:
-  name: attaches-to-all-listeners
+  name: gateway-route
   namespace: gateway-api-example-ns2
 spec:
   parentRefs:
@@ -93,20 +93,18 @@ metadata:
 apiVersion: gateway.networking.k8s.io/v1
 kind: HTTPRoute
 metadata:
-  name: attaches-to-example-com-on-gateway
+  name: gateway-listener-2-route
   namespace: gateway-api-example-ns3
 spec:
   parentRefs:
   - name: gateway-with-listenerset-http-listener
     namespace: gateway-conformance-infra
-    sectionName: example-com
-  hostnames:
-  - "example.com"
+    sectionName: gateway-listener-2-listener
   rules:
   - matches:
     - path:
         type: PathPrefix
-        value: /example-com
+        value: /gateway-listener-2-listener-route
     backendRefs:
     - name: infra-backend-v1
       namespace: gateway-conformance-infra
@@ -143,7 +141,7 @@ spec:
 apiVersion: gateway.networking.k8s.io/v1
 kind: HTTPRoute
 metadata:
-  name: attaches-to-all-listeners-on-listenerset
+  name: listenerset-1-route
   namespace: gateway-api-example-ns4
 spec:
   parentRefs:
@@ -155,7 +153,7 @@ spec:
   - matches:
     - path:
         type: PathPrefix
-        value: /listenerset-route
+        value: /listenerset-1-route
     backendRefs:
     - name: infra-backend-v1
       namespace: gateway-conformance-infra
@@ -169,7 +167,7 @@ metadata:
 apiVersion: gateway.networking.k8s.io/v1
 kind: HTTPRoute
 metadata:
-  name: attaches-to-bar-com-on-listenerset
+  name: listenerset-1-listener-2-listener-route
   namespace: gateway-api-example-ns5
 spec:
   parentRefs:
@@ -177,12 +175,12 @@ spec:
     group: gateway.networking.x-k8s.io
     name: listenerset-with-http-listener
     namespace: gateway-api-example-ns1
-    sectionName: bar-com
+    sectionName: listenerset-1-listener-2-listener
   rules:
   - matches:
     - path:
         type: PathPrefix
-        value: /bar-com
+        value: /listenerset-1-listener-2-listener-route
     backendRefs:
     - name: infra-backend-v1
       namespace: gateway-conformance-infra
@@ -196,7 +194,7 @@ metadata:
 apiVersion: gateway.networking.x-k8s.io/v1alpha1
 kind: XListenerSet
 metadata:
-  name: disallowed-listenerset-with-http-listener
+  name: listenerset-not-allowed
   namespace: gateway-api-example-ns6
 spec:
   parentRef:
@@ -205,11 +203,31 @@ spec:
     name: gateway-with-listenerset-http-listener
     namespace: gateway-conformance-infra
   listeners:
-  - name: baz-com
+  - name: listenerset-2-listener-1-listener
     port: 80
     protocol: HTTP
-    hostname: "baz.com"
+    hostname: "listenerset-2-listener-1.com"
     allowedRoutes:
       namespaces:
         from: All
 ---
+apiVersion: gateway.networking.k8s.io/v1
+kind: HTTPRoute
+metadata:
+  name: listenerset-2-route
+  namespace: gateway-conformance-infra
+spec:
+  parentRefs:
+  - kind: XListenerSet
+    group: gateway.networking.x-k8s.io
+    name: listenerset-not-allowed
+  namespace: gateway-api-example-ns6
+  rules:
+  - matches:
+    - path:
+        type: PathPrefix
+        value: /listenerset-2-route
+    backendRefs:
+    - name: infra-backend-v1
+      namespace: gateway-conformance-infra
+      port: 8080
