--- a/conformance/tests/listenerset-listener-precedence.yaml
+++ b/conformance/tests/listenerset-listener-precedence.yaml
@@ -5,24 +5,24 @@ metadata:
   namespace: gateway-conformance-infra
 spec:
   gatewayClassName: "{GATEWAY_CLASS_NAME}"
-  listeners:
-  - name: gateway-listener-1-listener
-    port: 80
-    protocol: HTTP
-    hostname: "gateway-listener-1.com"
-    allowedRoutes:
-      namespaces:
-        from: All
-  - name: gateway-listener-2-listener
-    port: 80
-    protocol: HTTP
-    hostname: "gateway-listener-2.com"
-    allowedRoutes:
-      namespaces:
-        from: All
   allowedListeners:
     namespaces:
       from: Same
+  listeners:
+  - name: gateway-listener
+    port: 80
+    protocol: HTTP
+    hostname: "gateway-listener.com"
+    allowedRoutes:
+      namespaces:
+        from: All
+  - name: domain-name-conflict-listener
+    port: 8010
+    protocol: HTTP
+    hostname: "domain-name-conflict-listener.com"
+    allowedRoutes:
+      namespaces:
+        from: All
 ---
 apiVersion: gateway.networking.k8s.io/v1
 kind: HTTPRoute
@@ -42,29 +42,10 @@ spec:
     - name: infra-backend-v1
       port: 8080
 ---
-apiVersion: gateway.networking.k8s.io/v1
-kind: HTTPRoute
-metadata:
-  name: gateway-listener-2-route
-  namespace: gateway-conformance-infra
-spec:
-  parentRefs:
-  - name: gateway-with-listenerset-http-listener
-    namespace: gateway-conformance-infra
-    sectionName: gateway-listener-2-listener
-  rules:
-  - matches:
-    - path:
-        type: PathPrefix
-        value: /gateway-listener-2-listener-route
-    backendRefs:
-    - name: infra-backend-v1
-      port: 8080
----
 apiVersion: gateway.networking.x-k8s.io/v1alpha1
 kind: XListenerSet
 metadata:
-  name: listenerset-with-http-listener
+  name: listenerset-with-domain-name-conflict
   namespace: gateway-conformance-infra
 spec:
   parentRef:
@@ -73,17 +54,24 @@ spec:
     name: gateway-with-listenerset-http-listener
     namespace: gateway-conformance-infra
   listeners:
-  - name: listenerset-1-listener-1-listener
-    port: 80
+  - name: domain-name-conflict-listener
+    port: 8010
     protocol: HTTP
-    hostname: "listenerset-1-listener-1.com"
+    hostname: "domain-name-conflict-listener.com"
     allowedRoutes:
       namespaces:
         from: All
-  - name: listenerset-1-listener-2-listener
-    port: 80
+  - name: protocol-conflict-listener
+    port: 8020
     protocol: HTTP
-    hostname: "listenerset-1-listener-2.com"
+    hostname: "protocol-conflict-listener.com"
+    allowedRoutes:
+      namespaces:
+        from: All
+  - name: listenerset-1-listener
+    port: 8080
+    protocol: HTTP
+    hostname: "listenerset-1-listener.com"
     allowedRoutes:
       namespaces:
         from: All
@@ -91,13 +79,13 @@ spec:
 apiVersion: gateway.networking.k8s.io/v1
 kind: HTTPRoute
 metadata:
-  name: listenerset-1-route
+  name: listenerset-with-domain-name-conflict-route
   namespace: gateway-conformance-infra
 spec:
   parentRefs:
   - kind: XListenerSet
     group: gateway.networking.x-k8s.io
-    name: listenerset-with-http-listener
+    name: listenerset-with-domain-name-conflict
     namespace: gateway-conformance-infra
   rules:
   - matches:
@@ -105,40 +93,14 @@ spec:
         type: PathPrefix
         value: /listenerset-1-route
     backendRefs:
-    - name: infra-backend-v1
+    - name: infra-backend-v2
       port: 8080
----
-apiVersion: gateway.networking.k8s.io/v1
-kind: HTTPRoute
-metadata:
-  name: listenerset-1-listener-2-listener-route
-  namespace: gateway-conformance-infra
-spec:
-  parentRefs:
-  - kind: XListenerSet
-    group: gateway.networking.x-k8s.io
-    name: listenerset-with-http-listener
-    namespace: gateway-conformance-infra
-    sectionName: listenerset-1-listener-2-listener
-  rules:
-  - matches:
-    - path:
-        type: PathPrefix
-        value: /listenerset-1-listener-2-listener-route
-    backendRefs:
-    - name: infra-backend-v1
-      port: 8080
----
-apiVersion: v1
-kind: Namespace
-metadata:
-  name: gateway-api-example-ns1
 ---
 apiVersion: gateway.networking.x-k8s.io/v1alpha1
 kind: XListenerSet
 metadata:
-  name: listenerset-not-allowed
-  namespace: gateway-api-example-ns1
+  name: listenerset-with-protocol-conflict
+  namespace: gateway-conformance-infra
 spec:
   parentRef:
     kind: Gateway
@@ -146,10 +108,23 @@ spec:
     name: gateway-with-listenerset-http-listener
     namespace: gateway-conformance-infra
   listeners:
-  - name: listenerset-2-listener-1-listener
-    port: 80
+  - name: domain-name-conflict-listener
+    port: 8010
     protocol: HTTP
-    hostname: "listenerset-2-listener-1.com"
+    hostname: "domain-name-conflict-listener.com"
+    allowedRoutes:
+      namespaces:
+        from: All
+  - name: protocol-conflict-listener
+    port: 8020
+    protocol: TCP
+    allowedRoutes:
+      namespaces:
+        from: All
+  - name: listenerset-2-listener
+    port: 8090
+    protocol: HTTP
+    hostname: "listenerset-2-listener.com"
     allowedRoutes:
       namespaces:
         from: All
@@ -157,19 +132,19 @@ spec:
 apiVersion: gateway.networking.k8s.io/v1
 kind: HTTPRoute
 metadata:
-  name: listenerset-2-route
+  name: listenerset-with-protocol-conflict-route
   namespace: gateway-conformance-infra
 spec:
   parentRefs:
   - kind: XListenerSet
     group: gateway.networking.x-k8s.io
-    name: listenerset-not-allowed
-    namespace: gateway-api-example-ns1
+    name: listenerset-with-protocol-conflict
+    namespace: gateway-conformance-infra
   rules:
   - matches:
     - path:
         type: PathPrefix
         value: /listenerset-2-route
     backendRefs:
-    - name: infra-backend-v1
+    - name: infra-backend-v3
       port: 8080
