--- a/config/crd/standard/gateway.networking.k8s.io_gateways.yaml
+++ b/config/crd/standard/gateway.networking.k8s.io_gateways.yaml
@@ -139,10 +139,11 @@ spec:
                   meaning it will dynamically and implicitly have Routes (e.g. HTTPRoute)
                   attached to it, according to the scope configured here.
 
-                  If unset or set to the empty string `""` (the default), the Gateway
-                  will not act as a default Gateway; if set, the Gateway will claim any
-                  Route with a matching scope set in its UseDefaultGateway field, subject
-                  to the usual rules about which routes the Gateway can attach to.
+                  If unset (the default), set to an empty string (`""`), or set to None,
+                  the Gateway will not act as a default Gateway; if set, the Gateway will
+                  claim any Route with a matching scope set in its UseDefaultGateway
+                  field, subject to the usual rules about which routes the Gateway can
+                  attach to.
 
                   Think carefully before using this functionality! While the normal rules
                   about which Route can apply are still enforced, it is simply easier for
@@ -151,7 +152,10 @@ spec:
                   control of the scope (e.g. namespace) with tight controls and checks on
                   what kind of workloads and Routes get added in that scope, we strongly
                   recommend not using this just because it seems convenient, and instead
-                  stick to explicit Route attachment.
+                  stick to direct Route attachment.
+                enum:
+                - All
+                - None
                 type: string
               gatewayClassName:
                 description: |-
@@ -1270,10 +1274,11 @@ spec:
                   meaning it will dynamically and implicitly have Routes (e.g. HTTPRoute)
                   attached to it, according to the scope configured here.
 
-                  If unset or set to the empty string `""` (the default), the Gateway
-                  will not act as a default Gateway; if set, the Gateway will claim any
-                  Route with a matching scope set in its UseDefaultGateway field, subject
-                  to the usual rules about which routes the Gateway can attach to.
+                  If unset (the default), set to an empty string (`""`), or set to None,
+                  the Gateway will not act as a default Gateway; if set, the Gateway will
+                  claim any Route with a matching scope set in its UseDefaultGateway
+                  field, subject to the usual rules about which routes the Gateway can
+                  attach to.
 
                   Think carefully before using this functionality! While the normal rules
                   about which Route can apply are still enforced, it is simply easier for
@@ -1282,7 +1287,10 @@ spec:
                   control of the scope (e.g. namespace) with tight controls and checks on
                   what kind of workloads and Routes get added in that scope, we strongly
                   recommend not using this just because it seems convenient, and instead
-                  stick to explicit Route attachment.
+                  stick to direct Route attachment.
+                enum:
+                - All
+                - None
                 type: string
               gatewayClassName:
                 description: |-
