chore: Review feedback: Drop empty string from doc comments
Signed-off-by: Flynn <emissary@flynn.kodachi.com>

--- a/config/crd/experimental/gateway.networking.k8s.io_tcproutes.yaml
+++ b/config/crd/experimental/gateway.networking.k8s.io_tcproutes.yaml
@@ -450,11 +450,10 @@ spec:
               useDefaultGateways:
                 description: |-
                   UseDefaultGateways indicates the default Gateway scope to use for this
-                  Route. If unset (the default), set to an empty string (`""`), or set to
-                  None, the Route will not be attached to any default Gateway; if set, it
-                  will be attached to any default Gateway supporting the named scope,
-                  subject to the usual rules about which Routes a Gateway is allowed to
-                  claim.
+                  Route. If unset (the default) or set to None, the Route will not be
+                  attached to any default Gateway; if set, it will be attached to any
+                  default Gateway supporting the named scope, subject to the usual rules
+                  about which Routes a Gateway is allowed to claim.
 
                   Think carefully before using this functionality! The set of default
                   Gateways supporting the requested scope can change over time without
