Issue 3940: Move BackendTLSPolicy to standard
Copy:
 apis/v1alpha3/backendtlspolicy_types.go -> apis/v1/backendtlspolicy_types.go
 apis/v1alpha2/policy_types.go -> apis/v1/policy_types.go

Update:
 apis/v1alpha2/policy_types.go
 apis/v1alpha3/backendtlspolicy_types.go
 config/crd/kustomization.yaml
 conformance/tests/backendtlspolicy-conflict-resolution.go
 conformance/tests/backendtlspolicy-conflict-resolution.yaml
 conformance/tests/backendtlspolicy-invalid-ca-certificate-ref.go
 conformance/tests/backendtlspolicy-invalid-ca-certificate-ref.yaml
 conformance/tests/backendtlspolicy-invalid-kind.go
 conformance/tests/backendtlspolicy-invalid-kind.yaml
 conformance/tests/backendtlspolicy-observed-generation-bump.go
 conformance/tests/backendtlspolicy-observed-generation-bump.yaml
 conformance/tests/backendtlspolicy-san.go
 conformance/tests/backendtlspolicy-san.yaml
 conformance/tests/backendtlspolicy.go
 conformance/tests/backendtlspolicy.yaml
 conformance/utils/kubernetes/helpers.go
 examples/standard/backendtlspolicy/backendtlspolicy-ca-certs.yaml
 examples/standard/backendtlspolicy/backendtlspolicy-system-certs.yaml
 pkg/features/backendtlspolicy.go
 pkg/generator/main.go
 pkg/test/cel/backendtlspolicy_test.go
 site-src/guides/tls.md

Delete:
 examples/experimental/v1alpha3/backendtlspolicy-ca-certs.yaml
 examples/experimental/v1alpha3/backendtlspolicy-system-certs.yaml

Regenerate the remaining files:
 rm -rf pkg/client
 make generate
 hack/../hack/verify-golint.sh (if needed)

--- a/conformance/tests/backendtlspolicy-conflict-resolution.yaml
+++ b/conformance/tests/backendtlspolicy-conflict-resolution.yaml
@@ -115,7 +115,7 @@ spec:
         name: "tls-checks-ca-certificate"
     hostname: "other.example.com"
 ---
-apiVersion: gateway.networking.k8s.io/v1alpha3
+apiVersion: gateway.networking.k8s.io/v1
 kind: BackendTLSPolicy
 metadata:
   name: conflicted-without-section-name-2
@@ -134,7 +134,7 @@ spec:
         name: "tls-checks-ca-certificate"
     hostname: "abc.example.com"
 ---
-apiVersion: gateway.networking.k8s.io/v1alpha3
+apiVersion: gateway.networking.k8s.io/v1
 kind: BackendTLSPolicy
 metadata:
   name: conflicted-with-section-name-1
@@ -154,7 +154,7 @@ spec:
         name: "tls-checks-ca-certificate"
     hostname: "other.example.com"
 ---
-apiVersion: gateway.networking.k8s.io/v1alpha3
+apiVersion: gateway.networking.k8s.io/v1
 kind: BackendTLSPolicy
 metadata:
   name: conflicted-with-section-name-2
@@ -174,7 +174,7 @@ spec:
         name: "tls-checks-ca-certificate"
     hostname: "abc.example.com"
 ---
-apiVersion: gateway.networking.k8s.io/v1alpha3
+apiVersion: gateway.networking.k8s.io/v1
 kind: BackendTLSPolicy
 metadata:
   name: not-conflicted-with-section-name
@@ -194,7 +194,7 @@ spec:
         name: "tls-checks-ca-certificate"
     hostname: "other.example.com"
 ---
-apiVersion: gateway.networking.k8s.io/v1alpha3
+apiVersion: gateway.networking.k8s.io/v1
 kind: BackendTLSPolicy
 metadata:
   name: not-conflicted-without-section-name
